--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@
 }
 .footer-bg{
 	background:  linear-gradient(-45deg, #090909, #333);
+	padding: 10px;
 }
 .social-icon{
 	width: 80px;
@@ -110,4 +111,25 @@
 	display: inline-block;
 	float: left;
 	margin: 5px;
+}
+.logo{
+	width: 120px;
+	margin-top: 15px;
+	
+
+}
+.contacts{
+	margin-top: 20px;
+}
+.text-justify{
+	text-align: justify;
+}
+.white{
+	color:#ffffff;
+}
+.landscape-bg{
+	background: url(../img/landscape.jpg) no-repeat;
+	background-size: cover;
+	 -webkit-background-size:  cover; 
+ 
 }
